[package]
name = "rush"
version = "0.1.0"
edition = "2021"
authors = ["Mark Tyrkba <marktyrkba456@gmail.com>"]

[features]
dbg = ["dep:tramer"]

[dependencies]
fnv = "1.0.7"
libc = "0.2.169"
rayon = "1.10.0"
flager = "0.0.8"
memmap2 = "0.9.5"
crossbeam-channel = "0.5.14"
tramer = { version = "0.1.0", optional = true }
dashmap = { version = "6.1.0", features = ["inline"] }
fxhash = { git = "https://github.com/rakivo/fxhash", rev = "2b61551" }
