[package]
name    = "rush"
version = "0.1.0"
edition = "2021"
authors = ["Mark Tyrkba <marktyrkba456@gmail.com>"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
description = "Simple, Peak Performance Build System"
repository = "https://github.com/rakivo/rush"
keywords    = ["build", "automation", "ninja", "parallel", "tasks"]
categories  = ["development-tools::build-utilities"]

[features]
dbg = ["dep:tramer"]
dbg_hardcore = ["dbg"]

[dependencies]
libc                = { version = "0.2.169", default-features = false }
paste               = { version = "1.0.15",  default-features = false }
memmap2             = { version = "0.9.5",   default-features = false }
indexmap            = { version = "2.7.1",   default-features = false }
bumpalo             = { version = "3.17.0",  default-features = false }
rustc-edit-distance = { version = "0.1.0",   default-features = false }
tramer              = { version = "0.1.0",   default-features = false, optional = true }
crossbeam-channel   = { version = "0.5.14",  default-features = false, features = ["std"] }
nix                 = { version = "0.29.0",  default-features = false, features = ["poll"] }
dashmap             = { version = "6.1.0",   default-features = false, features = ["inline"] }
clap                = { version = "4.5",     default-features = false, features = ["std", "help", "derive"] }

[dependencies.fxhash]
git = "https://github.com/rakivo/fxhash"
rev = "2b61551"
features = []
default-features = false

[profile.dev]
opt-level = 0
debug = 2
split-debuginfo = 'packed'
strip = "none"                    # don’t strip symbols
lto = false
overflow-checks = true

[profile.release]
opt-level = 3
panic = "abort"
codegen-units = 1
lto = "fat"
debug = false
strip = true
overflow-checks = false

# also: set RUSTFLAGS="-C force-frame-pointers=yes"
[profile.profiling]
inherits = "release"
debug = true                      # keep DWARF symbols
split-debuginfo = "packed"        # so perf can find them easily (Linux)
strip = "none"                    # don’t strip symbols
lto = false
codegen-units = 16
overflow-checks = false
panic = "abort"                   # optional: less noise, smaller code

